# aion-superagente

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  USAGE.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: launch.json
.githooks/: pre-commit
.github/workflows/: ci-rust.yml  ci-web.yml  release-desktop.yml  security-audit.yml
apps/aion-core/: Cargo.toml
apps/aion-core/src/: a2a.rs  agent_tools.rs  apikeys.rs  arcface.rs  awareness.rs  biography.rs  board.rs  capabilities.rs  claude_code.rs  claude_mcp.rs  comms.rs  comms_tools.rs  comprehension.rs  computer.rs  consciousness.rs  credentials.rs  deep_research.rs  doc_intent.rs  empathy.rs  episodic.rs  evals.rs  faces.rs  flow.rs  governance.rs  graph.rs  identity.rs  inbox.rs  ingest_queue.rs  inner_state.rs  intent.rs  intentions.rs  interests.rs  journal.rs  language_detector.rs  library.rs  local_runtime.rs  main.rs  mcp_compact.rs  memory_tool.rs  metacog.rs  (+35 more)
apps/aion-core/src/skills_seed/: code-review.md  data-analysis.md  deep-research.md  disk-cleanup.md  draft-email.md  explain-codebase.md  fact-check.md  find-large-files.md  lead-research.md  local-places.md  mac-security-audit.md  market-scan.md  meeting-notes.md  process-manager.md  proposal-generator.md  quote-invoice.md  report-builder.md  scaffold-project.md  skill-creator.md  summarize-document.md  system-health-scan.md  translate-document.md  trip-planner.md  write-tests.md
apps/aion-core/src/tools/: calendar.rs  discord.rs  home_assistant.rs  mcp_consumer.rs  mod.rs  sandbox.rs  skillbook_tool.rs
apps/control-plane/: Cargo.toml
apps/control-plane/src/: auth.rs  billing.rs  license.rs  main.rs  routes.rs  state.rs  store.rs
apps/desktop/: README.md  build-sidecars.sh  build-universal.sh
apps/desktop/face_probe/: Info.plist  face_probe.swift
apps/desktop/scripts/: vendor-ollama-runtime-windows.ps1  vendor-ollama-runtime.sh
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/binaries/: aion-control-plane-aarch64-apple-darwin
apps/desktop/src-tauri/bootstrap/: Modelfile.aion  first-run-models.sh
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: README.md  capacitor.config.ts  package.json
apps/tts-sidecar/: tts_chatterbox.py  tts_qwen.py  tts_server.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/app/claude-code/: page.tsx
apps/web/src/app/communications/: page.tsx
apps/web/src/app/documents/: page.tsx
apps/web/src/app/inbox/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/memory/: page.tsx
apps/web/src/app/mind/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/app/projects/: page.tsx
apps/web/src/app/routines/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/skills/: page.tsx
apps/web/src/app/tools/: page.tsx
apps/web/src/app/workflows/: page.tsx
apps/web/src/components/: AppShell.tsx  Icon.tsx  Markdown.tsx  index.ts
apps/web/src/lib/: api.ts  chime.ts  i18n.ts  lightbox.tsx  nav.ts  version.ts  voice.ts
crates/aion-browser/: Cargo.toml
crates/aion-browser/examples/: gsearch.rs
crates/aion-browser/src/: driver.rs  html.rs  lib.rs  pdf.rs
crates/aion-cognition/: Cargo.toml
crates/aion-cognition/src/: curiosity.rs  lib.rs  metacognition.rs  self_model.rs
crates/aion-computer/: Cargo.toml
crates/aion-computer/src/: action.rs  audit.rs  lib.rs  policy.rs  trash.rs
crates/aion-control/: Cargo.toml
crates/aion-control-client/: Cargo.toml
crates/aion-control-client/src/: lib.rs  license.rs
crates/aion-control/src/: input.rs  lib.rs  screen.rs  ui_tree.rs
crates/aion-docgen/: Cargo.toml
crates/aion-docgen/examples/: extract_demo.rs  offerta_sample.rs  sample.rs
crates/aion-docgen/src/: brand.rs  charts.rs  docx.rs  lib.rs  markdown.rs  offerta.rs  style.rs  style_extract.rs  template.rs
crates/aion-docgen/templates/: _layout.html  base.html  offerta.html  preventivo.html
crates/aion-evolution/: Cargo.toml
crates/aion-evolution/src/: lib.rs
crates/aion-kernel/: Cargo.toml
crates/aion-kernel/src/: errors.rs  events.rs  lib.rs  traits.rs  types.rs
crates/aion-llm/: Cargo.toml
crates/aion-llm/src/: lib.rs  ollama.rs  openai.rs
crates/aion-memory/: Cargo.toml
crates/aion-memory/src/: compressor.rs  embedder.rs  lib.rs  multilingual.rs  tfidf_compressor.rs  vector.rs
crates/aion-orchestrator/: Cargo.toml
crates/aion-orchestrator/src/: calc.rs  crew.rs  lib.rs  react.rs  tool.rs
crates/aion-skills/: Cargo.toml
crates/aion-skills/src/: host.rs  lib.rs  skillbook.rs
crates/aion-sync/: Cargo.toml
crates/aion-sync/src/: crdt.rs  crypto.rs  lib.rs
crates/aion-telemetry/: Cargo.toml
crates/aion-telemetry/src/: audit.rs  lib.rs
docs/: DAY1-USER-TEST-TEMPLATE.md  DESIGN_TOKENS.md  GOVERNANCE.md  MEMORIA-CLAUDE-CODE.md  MULTILINGUAL-STATUS.md  PACKAGING.md  PRD.md  RESEARCH_2026-06.md  RESEARCH_consciencia_creatividad_2026-06.md  auditoria-claude-code-mcp-2026-06-12.md  auditoria-sistema-2026-06-12.md  refinement-adr-0004-translation-alternatives.md  validation-adr-0004-results.md
docs/adr/: 0001-stack-y-arquitectura.md  adr-0004-multilingual-memory-optimization.md  adr-0005-auto-forja-capacidades.md  adr-0005-intenciones-propias.md  template.md
infra/: docker-compose.yml
infra/launchd/: it.prontoclick.aion.live.plist
infra/migrations/: 0001_init.sql
legacy/gemma4-reasoning/: Modelfile  README.md  bench_fa.py  bench_q4_q6.py  client.py  install.sh  quality_q4_q6.py  rag_demo.py  run_tests.py  run_tests2.py  serve.sh  test_vision.py
scripts/: INSTALAR-OTRO-MAC.md  agent_battery.py  measure_mcp_real.py  provision-voice-mac.sh  setup-hooks.sh  validate-option-1-no-translation.py  validate_multilingual_adr.py  verify_mcp_compact.py
(+26 files in other folders)
