[package]
name = "aion-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "AION core binary: assembles all crates and exposes the IPC layer to the UI."

[[bin]]
name = "aion-core"
path = "src/main.rs"

[dependencies]
aion-kernel.workspace = true
aion-telemetry.workspace = true
aion-llm.workspace = true
aion-memory.workspace = true
aion-orchestrator.workspace = true
aion-skills.workspace = true
aion-evolution.workspace = true
aion-browser.workspace = true
aion-cognition.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono = { workspace = true }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
futures-util = "0.3"
