[package]
name = "aion-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "AION core binary: assembles all crates and exposes the IPC layer to the UI."

[[bin]]
name = "aion-core"
path = "src/main.rs"

[dependencies]
aion-kernel.workspace = true
aion-telemetry.workspace = true
aion-llm.workspace = true
aion-memory.workspace = true
aion-orchestrator.workspace = true
aion-skills.workspace = true
aion-evolution.workspace = true
aion-browser.workspace = true
aion-docgen.workspace = true
aion-cognition.workspace = true
aion-sync.workspace = true
aion-computer.workspace = true
aion-control.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono = { workspace = true }
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
base64 = "0.22"
regex = "1"
sha2 = "0.10"
sysinfo = "0.32"
pdf-extract = "0.7"
zip = "8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
futures-util = "0.3"
mdns-sd = "0.20.0"
nusb = "0.2.3"

# Percepción del computador (Anillo 2, solo lectura, SOLO macOS): NSWorkspace.runningApplications.
# objc2 gatea cada clase por feature; activamos solo las que usamos. NO debe ir en [dependencies]
# general: en Windows/Linux arrastra objc-sys, cuyo build.rs solo compila en plataformas Apple y
# rompía el build de Windows. computer.rs tiene fallbacks #[cfg(not(target_os = "macos"))].
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication", "NSApplication"] }
objc2-foundation = { version = "0.2", features = ["NSArray", "NSString"] }

# Reconocimiento facial (ArcFace ONNX vía `ort`/onnxruntime): SOLO arm64-apple-darwin. `ort` con
# `download-binaries` NO tiene prebuilt para x86_64-apple-darwin → rompía el .app UNIVERSAL (la
# cara es solo-macOS-Silicon de todos modos). En el resto de targets, arcface.rs compila un STUB
# (embed→None) sin arrastrar `ort`, y faces.rs degrada limpio.
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-rustls"] }
