[package]
name = "aion-docgen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "AION document generation: Markdown → HTML (branded) → PDF/DOCX, 100% local."

[dependencies]
aion-kernel.workspace = true
aion-browser.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
# Markdown → HTML. pulldown-cmark es CommonMark + GFM (tablas/strikethrough/tasklists),
# API muy estable y puro Rust.
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
# Motor de plantillas: las plantillas branded se renderizan en runtime (iterar sin recompilar).
minijinja = "2"
# DOCX editable (Fase 3): generación nativa, sin dependencias del SO.
docx-rs = "0.4"
# Decodificación de imágenes para la EXTRACCIÓN de estilo (paleta dominante de una referencia
# renderizada). Solo png/jpeg: el k-means y el escaneo de fuentes son propios (sin más crates).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
