[package]
name = "aion-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "AION LLM layer: LlmEngine trait impls (Ollama F1, mistral.rs F2, MLX/Candle F6)."

[dependencies]
aion-kernel.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
