[package]
name = "aion-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "AION sync: Automerge CRDT + end-to-end encryption."

[dependencies]
aion-kernel.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
