[package]
name = "aion-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "AION sync: Automerge CRDT + end-to-end encryption."

[dependencies]
aion-kernel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
