[package]
name = "aion-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "AION observability: tracing setup, structured logging and audit log."

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
