# Crate del shell de escritorio (Tauri v2). NO forma parte del workspace Cargo
# raíz para no acoplar el build del núcleo a las dependencias nativas de Tauri.
# Build: `cargo install tauri-cli` y luego `cargo tauri build` desde apps/desktop.
[package]
name = "aion-desktop"
version = "0.0.1"
edition = "2021"
description = "AION desktop shell (Tauri) — carga la UI web y conecta con el núcleo."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Paquete independiente: NO forma parte del workspace Cargo raíz (evita acoplar
# el núcleo a las dependencias nativas de Tauri). Este [workspace] vacío lo aísla.
[workspace]
