# Crate del shell de escritorio (Tauri v2). NO forma parte del workspace Cargo
# raíz para no acoplar el build del núcleo a las dependencias nativas de Tauri.
# Build: `cargo install tauri-cli` y luego `cargo tauri build` desde apps/desktop.
[package]
name = "aion-desktop"
version = "0.0.1"
edition = "2021"
description = "AION desktop shell (Tauri) — carga la UI web y conecta con el núcleo."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon`: icono en la barra de menú (la app queda "arriba" en background al
# cerrar la ventana, sin matar el núcleo → Claude Code sigue sirviendo).
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Para apagar limpiamente el GRUPO de procesos del Ollama embebido (que lanza sus
# propios runners `llama-server` como hijos) y no dejar huérfanos al cerrar.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Paquete independiente: NO forma parte del workspace Cargo raíz (evita acoplar
# el núcleo a las dependencias nativas de Tauri). Este [workspace] vacío lo aísla.
[workspace]
